# tp2

./: .gitignore  BMPImage.cpp  BMPImage.h  CMakeLists.txt  README.md  main.cpp
filters/: filters.cpp  filters.h
images/: README.md
tests/: tests.cpp
utils/: utils.cpp  utils.h
